--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,7 @@ node_modules/
 jspm_packages/
 
 public/room-images
+public/room-gallery
 
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
