--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mailtrap": "^3.4.0",
     "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
     "pg": "^8.13.0",
