--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nodemon": "^3.1.7",
     "pg": "^8.13.0",
     "pg-hstore": "^2.3.4",
+    "qrcode": "^1.5.4",
     "sequelize": "^6.37.4",
     "twilio": "^5.4.2"
   }
